fix: revert R_B label to left side (doesn't fit on right), add \!important to input spinners CSS

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,10 +65,12 @@ body {
 /* Hide number input spinners */
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
-  -webkit-appearance: none;
+  -webkit-appearance: none !important;
+  appearance: none !important;
   margin: 0;
 }
 
 input[type="number"] {
-  -moz-appearance: textfield;
+  -moz-appearance: textfield !important;
+  appearance: textfield !important;
 }
